--- a/index.css
+++ b/index.css
@@ -3,12 +3,19 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+
 .container{
     width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    
+    backdrop-filter: blur(8px);
+
 }
 .card{
     background-color: white;
@@ -22,15 +29,17 @@
     -moz-box-shadow: 2px -2px 30px 6px rgba(0,0,0,0.75);
     box-shadow: 2px -2px 30px 6px rgba(0,0,0,0.75);
     flex-direction: column;
+
 }
 .search_group{
     width: 100%;
+    margin-bottom: 5px;
 }
 .search_group input{
     padding: 2px;
     width: 85%;
     background-color: lightgray;
-    color: white;
+    color: black;
 }
 .search_group button{
     padding: 2px;
@@ -51,3 +60,7 @@
     text-align: center;
     font-size: 30px;
 }
+#weather{
+    display: none;
+}
+
